# rasfled2

./: .gitignore  LICENSE  README.cajun.md  README.corporate language.md  README.cyberpunk.md  README.jive.md  README.md  README.simple.md  README.technical.md  build.md
configuration/: animations.json
source/: .screen4_helper.cpp.swp  CMakeLists.txt  LEDstuff.cpp  LEDstuff.h  aircraft_coordinator.cpp  aircraft_coordinator.h  alert_system_2.cpp  alert_system_2.h  alert_system_coordinator.cpp  alert_system_coordinator.h  animations_handler.cpp  animations_handler.h  animations_storage.cpp  animations_storage.h  auto.cpp  auto.h  auto_nova.cpp  auto_nova.h  automobile_handler.cpp  automobile_handler.h  camera_coordinator.cpp  camera_coordinator.h  camera_system.cpp  camera_system.h  changelog.txt  commands.cpp  commands.h  comport.cpp  comport.h  configuration.h  configuration_storage.cpp  configuration_storage.h  definitions.h  dnfwts.cpp  dnfwts.h  fled_time.cpp  fled_time.h  fledcore.cpp  fledcore.h  globe_helper.cpp  (+62 more)
source/Arduino/: RasCAN.ino  RasCAN_backup.ino
source/sound/: snd1.cpp  snd2.cpp  snd3.cpp  snd4.cpp
source/start_at_boot/: myscript.service  progs.sh  readme.md  start.sh
the_etc_slash_RasFLED_directory/: animations.json  readme.txt
